--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -575,14 +575,32 @@ nexus_repos_gitlfs_hosted:
 
 # yum support ...
 nexus_repos_yum_hosted: []
-nexus_repos_yum_proxy: []
-# Example for epel centos-7 x86_64
-# - name: epel_centos_7_x86_64
-#   remote_url: http://download.fedoraproject.org/pub/epel/7/x86_64
-#   # maximum_component_age: 1440
-#   # maximum_metadata_age: 1440
-#   # negative_cache_enabled: true
-#   # negative_cache_ttl: 1440
+nexus_repos_yum_proxy: 
+#Example for epel centos-7 x86_64
+    - name: centos7.6.1810-base
+      remote_url: http://mirror.ratiokontakt.de/mirror/centos/7.6.1810/os/x86_64/
+      maximum_component_age: 1440
+      maximum_metadata_age: 1440
+      negative_cache_enabled: true
+      negative_cache_ttl: 1440
+    - name: centos7.6.1810-extras
+      remote_url: http://mirror.ratiokontakt.de/mirror/centos/7.6.1810/extras/x86_64/
+      maximum_component_age: 1440
+      maximum_metadata_age: 1440
+      negative_cache_enabled: true
+      negative_cache_ttl: 1440
+    - name: centos7.6.1810-updates
+      remote_url: http://mirror.ratiokontakt.de/mirror/centos/7.6.1810/updates/x86_64/
+      maximum_component_age: 1440
+      maximum_metadata_age: 1440
+      negative_cache_enabled: true
+      negative_cache_ttl: 1440
+    - name: centos7.6.1810-epel
+      remote_url: http://mirror.imt-systems.com/epel/7/x86_64/
+      maximum_component_age: 1440
+      maximum_metadata_age: 1440
+      negative_cache_enabled: true
+      negative_cache_ttl: 1440
 nexus_repos_yum_group: []
 
 _nexus_repos_yum_defaults:
