--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -62,7 +62,7 @@ nexus_default_admin_password: 'admin123'
 # Note: this should be vault encrypted in your playbook.
 nexus_admin_password: 'changeme'
 
-nexus_anonymous_access: false
+nexus_anonymous_access: true
 
 nexus_public_hostname: 'nexus.vm'
 nexus_public_scheme: https
@@ -156,7 +156,7 @@ nexus_proxy_exclude_hosts:
   - "127.*"
   - "[::1]"
 
-nexus_config_pypi: false
+nexus_config_pypi: true
 nexus_config_docker: false
 nexus_config_raw: false
 nexus_config_rubygems: false
